update form modules

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 
   
  
-  
+<!--   
 <nav>
   <ul>
     
@@ -17,6 +17,8 @@
 [additionalInfo]="'Some additional information about the user.'"
 ></app-user-card>
 </div>
-<app-empinfo></app-empinfo>
+<app-empinfo></app-empinfo> -->
+
+<app-form-component></app-form-component>
 <!-- The routed views render in the <router-outlet>-->
-<router-outlet></router-outlet>
+<!-- <router-outlet></router-outlet> -->
