feat : http-client

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,11 +2,12 @@
 
   
  
-<!--   
+
 <nav>
   <ul>
     
     <li><a routerLink="/hello" routerLinkActive="active" ariaCurrentWhenActive="page">Hello Component</a></li>
+    <li><a routerLink="/blog" routerLinkActive="active" ariaCurrentWhenActive="page">Blog Component</a></li>
   </ul>
 </nav>
 <div>
@@ -17,8 +18,8 @@
 [additionalInfo]="'Some additional information about the user.'"
 ></app-user-card>
 </div>
-<app-empinfo></app-empinfo> -->
+<app-empinfo></app-empinfo> 
 
 <app-form-component></app-form-component>
 <!-- The routed views render in the <router-outlet>-->
-<!-- <router-outlet></router-outlet> -->
+<router-outlet></router-outlet>
